--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jest": "24.4.2",
     "html-webpack-plugin": "5.3.2",
+    "react-hot-loader": "4.13.0",
     "sass": "1.42.0",
     "sass-loader": "12.1.0",
     "style-loader": "3.2.1",
