--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "prod": "npm run webpack -- --env mode=production"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
+    "classnames": "^2.3.1",
+    "history": "^5.0.1",
+    "immutable": "^4.0.0-rc.15",
     "node-sass": "6.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.1.1",
+    "redux-observable": "^2.0.0",
+    "rxjs": "^7.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
@@ -29,11 +38,13 @@
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jest": "24.4.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.3.2",
     "react-hot-loader": "4.13.0",
     "sass": "1.42.0",
     "sass-loader": "12.1.0",
     "style-loader": "3.2.1",
+    "svg-inline-loader": "^0.8.2",
     "webpack": "5.53.0",
     "webpack-cli": "4.8.0",
     "webpack-dev-server": "4.2.1"
