--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "prod": "npm run webpack -- --env mode=production"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.6.4",
-    "classnames": "^2.3.1",
-    "history": "^5.0.1",
-    "immutable": "^4.0.0-rc.15",
+    "@ant-design/icons": "4.6.4",
+    "classnames": "2.3.1",
+    "history": "5.0.1",
+    "immutable": "4.0.0-rc.15",
+    "lodash": "^4.17.21",
     "node-sass": "6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.5",
+    "react-hook-form": "^7.16.1",
+    "react-redux": "7.2.5",
+    "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "redux": "^4.1.1",
-    "redux-observable": "^2.0.0",
-    "rxjs": "^7.3.0"
+    "redux": "4.1.1",
+    "redux-observable": "2.0.0",
+    "rxjs": "7.3.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
