--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
     "transform-class-properties",
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "@babel/plugin-transform-runtime"
   ]
 }
