--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@babel/plugin-transform-runtime": "7.15.0",
     "@babel/preset-env": "7.15.6",
     "@babel/preset-react": "7.14.5",
-    "@babel/runtime": "^7.15.4",
+    "@babel/runtime": "7.15.4",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-plugin-transform-class-properties": "6.24.1",
@@ -42,13 +42,13 @@
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jest": "24.4.2",
-    "file-loader": "^6.2.0",
+    "file-loader": "6.2.0",
     "html-webpack-plugin": "5.3.2",
     "react-hot-loader": "4.13.0",
     "sass": "1.42.0",
     "sass-loader": "12.1.0",
     "style-loader": "3.2.1",
-    "svg-inline-loader": "^0.8.2",
+    "svg-inline-loader": "0.8.2",
     "webpack": "5.53.0",
     "webpack-cli": "4.8.0",
     "webpack-dev-server": "4.2.1"
