--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
   "plugins": [
     "transform-class-properties",
     "react-hot-loader/babel",
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-transform-runtime",
+    "@emotion"
   ]
 }
