--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.6.4",
+    "@emotion/react": "11.4.1",
     "classnames": "2.3.1",
     "history": "5.0.1",
     "immutable": "4.0.0-rc.15",
@@ -22,6 +23,7 @@
     "react-redux": "7.2.5",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
+    "react-spinners": "0.11.0",
     "redux": "4.1.1",
     "redux-observable": "2.0.0",
     "rxjs": "7.3.0",
@@ -38,6 +40,7 @@
     "babel-loader": "8.2.2",
     "babel-plugin-transform-class-properties": "6.24.1",
     "css-loader": "6.3.0",
+    "@emotion/babel-plugin": "11.3.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "8.3.0",
